--- a/SGF.PRESENTACION/formPrincipales/formInventario.resx
+++ b/SGF.PRESENTACION/formPrincipales/formInventario.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="bindingNavigator1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>689, 17</value>
+  </metadata>
   <metadata name="dgvcNombreCategoria.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -124,7 +127,7 @@
   <data name="btnEntradaMasiva.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAA4hJREFUSEvtkvtPUnEYxv0L+hNyK1NDbMzwVnpUUBLooriV9yxNk1wtg9DlrGh5
+        DAAACwwBP0AiyAAAA4hJREFUSEvtkvtPUnEYxv0L+hNyK1NDbMzwVnpUUBLooriV9yxNk1wtg9DlrGh5
         2eyiLpvNlW419ZdYP2SKt8TUwLTs8kP3i5Z4S6S8hfDGezwHQ2hL0lXLZ3u2797zPs/new44reqvlpeL
         13Ye07cXjWdqvHJiurOCeB6+XeeDdupGYsQwFnsIrnKjJgTmC7BcPfnU2vJpk+umgDAPX1V+oHB0yAyc
         iMuw8misGMo4EZ/DPHx6WRtYoVTMcbm6srxDmT7thcT20aHoBWCdMG42kcP/gsYzPccd3MUMZqmaX5eb
@@ -145,7 +148,7 @@
   <data name="btnSalidaMasiva.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAAxZJREFUSEvtlt1PUnEYx1lX1UUX/Q39CV10VRduNafN7M1V602XzmYarHwp5QDn
+        DAAACwwBP0AiyAAAAxZJREFUSEvtlt1PUnEYx1lX1UUX/Q39CV10VRduNafN7M1V602XzmYarHwp5QDn
         ICbCSVAQeck3XgJTmYmKCqaoTEFFM1/SaSsn1iyXOqmkJ87ZoWmCiqZd2Hf7XP2e5/s5Lxfn0PZfzjMb
         +i6xzCPbJZrVmEBVhZYY1OLm18/DdsjUvYMLSNNTqiq0/BeHAiG+wyptLsUi32tyoj4EoyL77HQJJ6JF
         QD9xiNLuXJyK4UsLTgyWerkb4tQnLqs44WxKu3MxWyDx/CkxlySCXhy3FlEsKLCLHgQ5dfCviDkBxGpx
