--- a/SGF.PRESENTACION/formPrincipales/formPerfiles.resx
+++ b/SGF.PRESENTACION/formPrincipales/formPerfiles.resx
@@ -163,7 +163,7 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <data name="btnInformes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAuditoria.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         DAAACwwBP0AiyAAAAyNJREFUSEvVl/9PEmEcx936pT+uH2zZam0Nyb5o00NzNm0TKPySiqA2K3UmopSC
