--- a/SGF.PRESENTACION/formModales/mdEntradaInventario.resx
+++ b/SGF.PRESENTACION/formModales/mdEntradaInventario.resx
@@ -117,60 +117,53 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>369, 54</value>
-  </metadata>
-  <metadata name="productoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 54</value>
+  <metadata name="detalleCompraBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>114, 17</value>
   </metadata>
   <metadata name="negocio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>842, 17</value>
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnEntradaMasiva.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnNuevo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAA4hJREFUSEvtkvtPUnEYxv0L+hNyK1NDbMzwVnpUUBLooriV9yxNk1wtg9DlrGh5
-        2eyiLpvNlW419ZdYP2SKt8TUwLTs8kP3i5Z4S6S8hfDGezwHQ2hL0lXLZ3u2797zPs/new44reqvlpeL
-        13Ye07cXjWdqvHJiurOCeB6+XeeDdupGYsQwFnsIrnKjJgTmC7BcPfnU2vJpk+umgDAPX1V+oHB0yAyc
-        iMuw8misGMo4EZ/DPHx6WRtYoVTMcbm6srxDmT7thcT20aHoBWCdMG42kcP/gsYzPccd3MUMZqmaX5eb
-        m6cnl+HdkuW/bexjdLoF2LIj3pDCEejzck4Yu9VN0NPdDMUFZ037QoX6emGs5QJac8b8dcY4DHa32zom
-        m6r9uZydme7BG71vyfx52oE9By1A1Y4Ew4Fg4cQpidSo7mqED28fw+zMMHybHYGP/c/ggaYJiuS5xoTg
-        8C+NwrhvdG4wJh3yAgXaYAZbtcGZwaIw1iI2suXZ/rzB97vTLMCOXXuNyUT4+BmZbO5+pxLevXkEM1ND
-        0KpWQY3yNum75vPs9DD0v38C6i4lmHeNKSECPWbpHuzEbmRQuAVxGD719GJPZJIxlQjXScQZc/dUd+DN
-        q4cwPaUFk3GcdO6NasjqeUoaz/R8ZnqI/BpdHQ1wSioxxhM8fefORMsFkEHhFoTDR6L9cJjg646niw3t
-        bXXzwMlBSzFtfEvLG2vabZ7TF+jsqIfTEulcMrFNr4lIMtkFb3Vnl/ix/Horq8rh9YsHMPn1E7TdbYaa
-        2hqHrGprgqlJLfnzVFVdAexGBoWzFjdMkKPRtJG31o33Q9mlUvKfa88KxXXS9p6hMTuhGyC7sBO7KYyt
-        AgjO8b6+++Ty4KeXUFNdabcUrWy4SdreMzRmsQO7sBO7KYytfgQP9D+HxKRsEGcUOmTMYseSwXhbWfY1
-        yC9scMiYdeiN/zg4r6AeZEeLQC4rsLJMWgpZ0hLbeea5+czvgiWZpTBQK4M55UkrK/LSQJGfZjPHXemx
-        kmUAHykgC9WXMyA/XUR6VJENrRfTSOOZnuMO7mJm2cCLTYPtPfvXwYVgaMi1KW+5cBCazV48x13MLAns
-        u4WbKT8jH6+oKB8pLr4wtkuUbIiMOmAQ8fmmxAihlTlEiIkbyLGZR/EFJlFUqgGz2IFd2IndFMZWLi4u
-        a9au99y8EsZuCrOq/0JOTt8BgVwganwIYR4AAAAASUVORK5CYII=
+        DAAACwwBP0AiyAAAAo5JREFUSEvtlt1PUmEcx7noD2htXXfV3+Fl/0NXdVGR2QVrulWDAy6d2kjShiSQ
+        vBwOCrosDQ8GYg7bkFCUmInykmXlTbpYc2ujX+fHntPhyDnWA2611mf7XvCwfT88b+eg+WvQ33e39A6P
+        9dLGOOgOM8zISVJDT7eNsywk12CztEMV04AXuoa4csNyFOe3PwAtw6PPILNRgC6rr6wzB06Rut+nGTHS
+        sLxZMdKQ/DjECLX8uMQIlbxRsWnQC45AqC6dwrjB4oqRenUaFauBXdhJ6tX5L0aU9u6o1PLvzliNPzZj
+        fIHY/NMsqVdHSTyfWP1lYkLmEhmIJtZg/WMe+NcLMLkSgeDLCPhmYylSr46S+PArUCnZrXcQXIxAe7AP
+        zHN2cCY5cKXGwBp3Q8d437crHkPoovPmaaKph1a8UXgPmdxbCCRD0BMegpn8c5gtRevCroxXtF5D6bzj
+        xhmikqMknnmxpBo+ngI7/6QqrRUlPy1Dfr8gGwtmn4LWo19vYZgTRCdBe7gq3ytw67G5bqYoRWrHMPfm
+        7eXLrttXiU5CSax0fTC+qRiM8Lww24d1AjXx9BYPWpZJE50E7Yzx9DqWuGqpuLyYzwd71e/FzxhRfo0z
+        bhOdBK14cjlSPb1YiOVHIYqv+007RCdBK45vpsC66PlZKkb8EYfHw6UItLLGItFJ0Ir3vn4BZspSJ1AT
+        +1YnQOvVjxKdBK0YeRD1gi89IRMoiotR0AXu7F541H6W6CRQTPOHPifk1ZscdATvVu+pTFQbQdoZGti/
+        5NYbiEqOvt99rtvK2Wji5+NxTzia1XE9B/0xZwWvjCjEPcXlxZmqSpsFn0j4cNCyhnSbcGXahNPbyhqK
+        uKfy5dVofgDfEq3Bh16/DQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnSalidaMasiva.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDetalles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAxZJREFUSEvtlt1PUnEYx1lX1UUX/Q39CV10VRduNafN7M1V602XzmYarHwp5QDn
-        ICbCSVAQeck3XgJTmYmKCqaoTEFFM1/SaSsn1iyXOqmkJ87ZoWmCiqZd2Hf7XP2e5/s5Lxfn0PZfzjMb
-        +i6xzCPbJZrVmEBVhZYY1OLm18/DdsjUvYMLSNNTqiq0/BeHAiG+wyptLsUi32tyoj4EoyL77HQJJ6JF
-        QD9xiNLuXJyK4UsLTgyWerkb4tQnLqs44WxKu3MxWyDx/CkxlySCXhy3FlEsKLCLHgQ5dfCviDkBxGpx
-        ArS5YR2VVYqf0qwzoj0XWybnQc6N8ey5mECjYnol6WE391xsHpwAZfbl2T0XE8h5Md5/Ilbl3d4dcbnw
-        Fph6nEFR5FzZHfGAkQHW8rtBUWHnlnZFvBlqXtQM7XpmnfcGu3FlezR4UZ7iR6DyQPjTomXO0WpiUxcH
-        8uQw2jYO40NfQ8LeMgFaAX/Ld+wPKe4KCwOCYWNnwPKNCFXsGasgMeBXZ2nN0de+ORKSYcTsIstGB76A
-        sqIF2LiaBJcZweVwr5MSBBMPN/MgN78QUFwGXKEEWqv5a87Jd1yEVblXl4mUtVBebQG76y1JrbUH2EI1
-        eUGr5wgCiade8YAjLAarfZDc7+wdBaFcu0buE0+vEQ86PwJXrCMXZNp64BcbyEXFczOYGga2JH6mzIeX
-        VgeYbf2AFWrB0NBBdmC4BBadXBgzMbylaISNlv9Y01eA6EYInjDLpgSyFyuEOIlZAPEZOJhanaA32YDF
-        Un3yz/2GqZ4sYj6YLsMi3/jJQHOX2x3DoNSbyX2uT070ZfDE30vRyCHfn0iZHDl9lPxC+ROPyA4/zC6e
-        6eofg5omO1QYreRSnrzyc3wafpIa2zD3OVJcV9e+YnOOgMrQBE0dLrDYXwMDLeqjRgInhSNJ813lHLHQ
-        2j0EMo1pgc6RNlLHm+Yekn/EJx8n5O3OYd9j74HUHIU7/pH4ODUSPElZonAGJq2no0W2FESSjCDIAepo
-        SyHkdFQiZKDSbl+POi5dcIw62reh0X4BpB79ypnWoHAAAAAASUVORK5CYII=
+        DAAACwwBP0AiyAAAAyNJREFUSEvVl/9PEmEcx936pT+uH2zZam0Nyb5o00NzNm0TKPySiqA2K3UmopSC
+        CkgTFBAhjW+iYApyQseXgQioq7XUzD3dc90ZMs8h59r8bK9fPs/zvF88dw+3u4LsMg3wrtoHee9c0udW
+        iF3Cdcx218YwmyZE9U7D0FUV8JkUcbdcuJjZd0q4/TCTjKcvxyDPYhuoBwt9dQR6MQeomh4dee2GA6p3
+        GuqGB8CplR06R4V7mX2Y5ZByzWQ8fZlfP/UYxAgwdlb5jV3V3umO6lSPoGq98HpRQtuO+A2dlXgfjv0D
+        9iZelOzeLrqRbn72xALXEeAZMGvuTY2HjKcvoxixqgX3Qdy/nNrZioJYwAOkA32ha0V3AWRGOfzTpleC
+        TGCPGm8Vil1wHSSJ+ZLEJvBMMp6+8IlWBY8FomvONCX+bJz8rVXJ9iFe5+xB0GM5AewR4xpl1OWwxrPF
+        MJOMp69scXozBNKxYE7sbEUI4YWImXD5xCn8Mr+VtRyjmpaeKqAjf3E8BIbHe4+Z1I6AVbcrJ7YTkfzF
+        SVz8mFOTF3Dt5T9cSp0UbGwsn+idBSNxYHHOZOprCouaSwOzlgmMCh0dlYM77FJatmIYM/H6J+1cG784
+        0d9Y9j0RRt2UGAZHMZQWOIeRWCJtWZG0cRL6bu5uMoquUOJhmQwU3mLRwnjH8G9Byc7LhR0u04IGbKDu
+        E72zYCSOrjotzon+paFe/he1bmiTCp36qAE1dVxakvEw88PV01i63SUoSWUerqB/Ddit87QwenJBwYhM
+        tASlOlEtyBSPjSkA62EFLYyfXBHM9wP/9cm/RH9R4s1IEGColxY458IO13lhJI4HvTafZcoMwd9Gwtnh
+        Z8FIDIXw/mbf41z4r+IU/u4VDgXM2Fd0wT09os5bDC8vFBLSRORbtiibkNcK/OhayvzhFWoQIfs5i/Vi
+        ZH6cz877cEGx+X2nXyW4d0RK8a8RZJ6Mpy+9uKJR21oGxvjFe/J61uF5UXDZhypByRG+W0JKiEVIAxlP
+        X3L5zSvGdoRtEFY26drKO/Jhpp3TgsteQgzi8mKYScaTVVDwB/rXDblPAQytAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnExportarP.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnExportar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAtlJREFUSEvNl2tIU2EYx/0WgSGpSbcvGUVFQZDBNjbn2jlpCQl+MHe6kOtkFxTU
+        EQAACxEBf2RfkQAAAtlJREFUSEvNl2tIU2EYx/0WgSGpSbcvGUVFQZDBNjbn2jlpCQl+MHe6kOtkFxTU
         dK4bpl3UblJRaLKUCA1DZl+0gigLLUgIg/pig6IPSlBS5G26Pe19fd91xh57dQPpDz84POd5/n8e3pcD
         J+a/UlxRSvJcWVisW8HGI1dsiQ7mSlypwR9bpDvCLCITZiziRvctSHKaowvHjEW89HRCe/+D6MIxYxEk
         +NP3N9GFY8YieHBU4ZixCG1wxOGYsYjrgct1v+9eCKXusxBbrPMxW7Ew42hgtmJhw0vKzVDYVkNZV5UV
@@ -185,53 +178,7 @@
         SordK9sOetP3qCZmPz8iFyn8MsXE/AFl/UCZIE7AewAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="bindingNavigator1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>689, 17</value>
-  </metadata>
-  <data name="bnpUltimoItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAASxJREFUOE9jGFygcNbz/1AmBgDJNS14/j9z4mOcahhyZz77n9B9D6sCkNyqI+//
-        h7c/wG1AxpSn/+ft//0/oesOhiKQ3MJ9H/4HN1zDbUBCz5P/s/f9+t+59e9/t9LLKApBctO2vP/vX30B
-        twGRXY/+T9n263/J0r//E6b//W+TexauGCTXu/rDf6/SE7gNCGx++L917XuwZuOSL/+lo6/9N45cBtYA
-        kqub/+6/S/4B3AZ4VN3/XzL3HVyzoksPXDFILn/am//2GdtxG2Bfevd/YMszDM0gAJLLnvz6v0XCetwG
-        WOTd+W9TcAVDMwiA5FL7X8O9hBUYZt3GqhkEQHJhLS//6wbPw22ATtoNnJIgOb/qh/81fKfhNgAfcMq9
-        8l/FYwIYQ4UGBWBgAAC+0b+zuQxOnAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="bnpSiguienteItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAAKNJREFUOE9jGHygcNbz/1AmeSB35rP/Cd33yDckY8rT//P2//6f0HWHPEMSep78
-        n73v1//OrX//u5VeJt2QyK5H/6ds+/W/ZOnf/wnT//63yT1LmiGBzQ//t659D9ZsXPLlv3T0tf/GkcuI
-        N8Sj6v7/krnv4JoVXXpIc4F96d3/gS3PyNMMAhZ5d/7bFFwhTzMIGGbdJl8zCOik3SBf81AEDAwAoH5f
-        oAc0QjgAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="bnpItemAnterior.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAALZJREFUOE9jGDogvP3BfyiTdBDf/eB/cMM18gyI73n4f+n+///9qy+QbkBE+32w
-        5sxZ//97lZ4gzYDQ1ntgza3rgLZ3/v3vkn+AeAOCW+7+X7T3//8OoOaMOT//29X9/G+fsZ00F9gV3/6f
-        Puf3f/+ub/91Ct/9t0hYT3oY6Kec/29S9OK/Stan/8aRy0g3AAQMkk78l037+l83eB55BoCAfurl/xq+
-        08g3AARUPCZQZsBgBQwMANAUYJgEulBVAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="bnpPrimerItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAASpJREFUOE9jGDygcNbz/00Lnv/PnPj4P1QIA4S3P8Apx5A789n/VUfe/8elKL77
-        wf/ghmu4DciY8vT/wn0fsCqK73n4f+n+///9qy/gNiCh58n/aVveYyiKaL8P1pw56/9/r9ITuA2I7Hr0
-        v3f1BxRFoa33wJpb1wFt7/z73yX/AG4DApsf/q+b/w6uKLjl7v9Fe///7wBqzpjz879d3c//9hnbcRvg
-        UXX/f/60NyiK7Ipv/0+f8/u/f9e3/zqF7/5bJKzHbYB96d3/2ZNfYyjSTzn/36ToxX+VrE//jSOX4TbA
-        Iu/O/9T+11gVGSSd+C+b9vW/bvA83AYYZt3+H9byEqci/dTL/zV8p+E2QCftxn+/6od4Fal4TMBtgFPu
-        lf8gBXgVDULAwAAA8HbAq6XlmnAAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="productoTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>197, 54</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>81</value>
+  <metadata name="detalle_CompraTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>323, 17</value>
   </metadata>
 </root>
