--- a/SGF.PRESENTACION/Properties/Resources.resx
+++ b/SGF.PRESENTACION/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="plantillaDetalle_Compras" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Plantillas\plantillaDetalle_Compras.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="checkList_Negro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\Iconos Negros\checkList_Negro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -129,5 +132,8 @@
   </data>
   <data name="eliminar-boton-15" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recursos\Iconos Coloridos\eliminar-boton-15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="farmaciaLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recursos\Iconos Coloridos\farmaciaLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
