--- a/SGF.PRESENTACION/formModales/Entrada inventario/mdDetalleCompraEntrada.resx
+++ b/SGF.PRESENTACION/formModales/Entrada inventario/mdDetalleCompraEntrada.resx
@@ -124,61 +124,42 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnNuevo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnImprimir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAo5JREFUSEvtlt1PUmEcx7noD2htXXfV3+Fl/0NXdVGR2QVrulWDAy6d2kjShiSQ
-        vBwOCrosDQ8GYg7bkFCUmInykmXlTbpYc2ujX+fHntPhyDnWA2611mf7XvCwfT88b+eg+WvQ33e39A6P
-        9dLGOOgOM8zISVJDT7eNsywk12CztEMV04AXuoa4csNyFOe3PwAtw6PPILNRgC6rr6wzB06Rut+nGTHS
-        sLxZMdKQ/DjECLX8uMQIlbxRsWnQC45AqC6dwrjB4oqRenUaFauBXdhJ6tX5L0aU9u6o1PLvzliNPzZj
-        fIHY/NMsqVdHSTyfWP1lYkLmEhmIJtZg/WMe+NcLMLkSgeDLCPhmYylSr46S+PArUCnZrXcQXIxAe7AP
-        zHN2cCY5cKXGwBp3Q8d437crHkPoovPmaaKph1a8UXgPmdxbCCRD0BMegpn8c5gtRevCroxXtF5D6bzj
-        xhmikqMknnmxpBo+ngI7/6QqrRUlPy1Dfr8gGwtmn4LWo19vYZgTRCdBe7gq3ytw67G5bqYoRWrHMPfm
-        7eXLrttXiU5CSax0fTC+qRiM8Lww24d1AjXx9BYPWpZJE50E7Yzx9DqWuGqpuLyYzwd71e/FzxhRfo0z
-        bhOdBK14cjlSPb1YiOVHIYqv+007RCdBK45vpsC66PlZKkb8EYfHw6UItLLGItFJ0Ir3vn4BZspSJ1AT
-        +1YnQOvVjxKdBK0YeRD1gi89IRMoiotR0AXu7F541H6W6CRQTPOHPifk1ZscdATvVu+pTFQbQdoZGti/
-        5NYbiEqOvt99rtvK2Wji5+NxTzia1XE9B/0xZwWvjCjEPcXlxZmqSpsFn0j4cNCyhnSbcGXahNPbyhqK
-        uKfy5dVofgDfEq3Bh16/DQAAAABJRU5ErkJggg==
+        DwAACw8BkvkDpQAAAfFJREFUSEvtl81LInEchwe22963/6T/oejarVsQtewpIbQXRHcvqZuLZbC7lU3i
+        FBNr28uWqdDLZFFZhm4FnSKpWyUVXTp86zONMY3KjPPrFfrAAwPO73nAg+Nwpdb1e7TGMzBWywIcis74
+        YlLy6DR3QSzAoeiML7G5c0iMg0PRGd972MzKDjdavQsxaVM5bn5wwKVoC1dvcX9s8wTav/rFbmB1DWVd
+        wgaJUpYJOODKe9FAS47a7faKb35xMTyfpr+L/+9pDWTIPZtjAg61Ew206urED9wXu69qeGr1Wn0DsPJ7
+        RWXlAIfWixaaXIvzV+1IZKPghscMz62kaH1bkq/RQvNZwojmjv7I188aVqMbtvG7RWXlAIfWqxvu4FO3
+        h88KZEZxzZzJDq1XNyzG0+QMpsgRypBTKA+ccQS3ZIfWqxt+Kl5neGgiQb2hCPmFOSbg4CcTD9wlwz2h
+        KDXavOTwBSkQjjMBB1y9QlQ/3B9eouYOH43MLNNu9oQJOOAaHL/71XoQtjh+VguR5P0HeaTkjvJwMz84
+        tF600OQabD8q+0bjx9ob1OHzyytKZvYNgXvzKxZGq8ni/iQ/Gju/8589g9Pb3sC/gzwLa+lr5bzpwaF2
+        otHuHW6Wo6X2Kv5zmf2qmcNm97bCL/YK87QvbRx3A9dJf038JlSSAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnDetalles.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAyNJREFUSEvVl/9PEmEcx936pT+uH2zZam0Nyb5o00NzNm0TKPySiqA2K3UmopSC
-        CkgTFBAhjW+iYApyQseXgQioq7XUzD3dc90ZMs8h59r8bK9fPs/zvF88dw+3u4LsMg3wrtoHee9c0udW
-        iF3Cdcx218YwmyZE9U7D0FUV8JkUcbdcuJjZd0q4/TCTjKcvxyDPYhuoBwt9dQR6MQeomh4dee2GA6p3
-        GuqGB8CplR06R4V7mX2Y5ZByzWQ8fZlfP/UYxAgwdlb5jV3V3umO6lSPoGq98HpRQtuO+A2dlXgfjv0D
-        9iZelOzeLrqRbn72xALXEeAZMGvuTY2HjKcvoxixqgX3Qdy/nNrZioJYwAOkA32ha0V3AWRGOfzTpleC
-        TGCPGm8Vil1wHSSJ+ZLEJvBMMp6+8IlWBY8FomvONCX+bJz8rVXJ9iFe5+xB0GM5AewR4xpl1OWwxrPF
-        MJOMp69scXozBNKxYE7sbEUI4YWImXD5xCn8Mr+VtRyjmpaeKqAjf3E8BIbHe4+Z1I6AVbcrJ7YTkfzF
-        SVz8mFOTF3Dt5T9cSp0UbGwsn+idBSNxYHHOZOprCouaSwOzlgmMCh0dlYM77FJatmIYM/H6J+1cG784
-        0d9Y9j0RRt2UGAZHMZQWOIeRWCJtWZG0cRL6bu5uMoquUOJhmQwU3mLRwnjH8G9Byc7LhR0u04IGbKDu
-        E72zYCSOrjotzon+paFe/he1bmiTCp36qAE1dVxakvEw88PV01i63SUoSWUerqB/Ddit87QwenJBwYhM
-        tASlOlEtyBSPjSkA62EFLYyfXBHM9wP/9cm/RH9R4s1IEGColxY458IO13lhJI4HvTafZcoMwd9Gwtnh
-        Z8FIDIXw/mbf41z4r+IU/u4VDgXM2Fd0wT09os5bDC8vFBLSRORbtiibkNcK/OhayvzhFWoQIfs5i/Vi
-        ZH6cz877cEGx+X2nXyW4d0RK8a8RZJ6Mpy+9uKJR21oGxvjFe/J61uF5UXDZhypByRG+W0JKiEVIAxlP
-        X3L5zSvGdoRtEFY26drKO/Jhpp3TgsteQgzi8mKYScaTVVDwB/rXDblPAQytAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnExportar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAtlJREFUSEvNl2tIU2EYx/0WgSGpSbcvGUVFQZDBNjbn2jlpCQl+MHe6kOtkFxTU
-        dK4bpl3UblJRaLKUCA1DZl+0gigLLUgIg/pig6IPSlBS5G26Pe19fd91xh57dQPpDz84POd5/n8e3pcD
-        J+a/UlxRSvJcWVisW8HGI1dsiQ7mSlypwR9bpDvCLCITZiziRvctSHKaowvHjEW89HRCe/+D6MIxYxEk
-        +NP3N9GFY8YieHBU4ZixCG1wxOGYsYjrgct1v+9eCKXusxBbrPMxW7Ew42hgtmJhw0vKzVDYVkNZV5UV
-        8i6/pZLW158LrXOYrVjYMOHR++dA1NrXFazluMpobeDbF0hwmEL6OcxWLGyYQDYamRgDn98Hust7ydcK
-        Pg56aHDm7QJ0hsBsxcKGOTVPXTTI3f8MCtqq6XNLXyfay2G2YmHDnCRnGnwdHgK/3w8/Rn7C8OgvSK7Y
-        ifZymK1Y2LCW8o46uinRhceNaI8WZisWNsyJLzPBh8C5eqcmYXzSSy9VoiMV7eUwW7GwYU5VVwPdtP7V
-        Q7jZ3Uqfq5+40F4OsxULGyZsrs6BsckJ+D0+CqsrMmHlKZme8cSUF1JqbcG++HIDGO/IQZitWNowzqLj
-        engx8DZsw8rOelrr8byjPaQW7zSAtTkdpBO7QSq1gWRTm2WbeoXZzyxuqmVLbS7cfe0GV68blp20ButJ
-        Tgs09rTTd6SH1HiwbM8DWVGnsamfmf3M4qaRMq/BCU49rKkxUzZcSpu/4OVnjNPnWrcLrFezKPIB+99g
-        RR2yKockgqzYU1lUqDBjEYsdejA1yiBdzNaGoWxX1HwWFSrMeDYsPW0ES1Nga0cuGkiQFLWexYQLM50t
-        q86bwNqUAdKxfVhwb0ZG4QIWEy7McC5sumYBa8MOkPM0l0tRB7ftP/zvvw3tr0kkJDq3rt1YazQbSrKP
-        SordK9sOetP3qCZmPz8iFyn8MsXE/AFl/UCZIE7AewAAAABJRU5ErkJggg==
+        DAAACwwBP0AiyAAAAtRJREFUSEvFV0tPE1EUnuif8BEfia9fYHRHQiBteG+GDqWwo0tpsYF2RcrCWI3A
+        RqNLKFXDX1B3xsSmqEHakihRGUhKYotRaMdFW883vX1y2s5AwS/5mum9Z86XM3PPYySzWJbl0287Os5F
+        OjtvgbjGmthuLT4NDFxfGxp6uOF0vtkcH/+x4/WmUn5/Dkz4fCmsYQ82H7q7r4nbDo+PFsvl9ZGRFwmv
+        N5menc1n5uYaEjaJqamfcbpnpavrknBjDlFZ9mx7PFucgBFuT0yoa4riFu6aA++LbniyOzPzh3NohvQq
+        9uN2+zNDZyBKhr8DgSzn6DCEr5jd/lS45xFVlDupFkRaS/K5H7XZPEKmGjhIR3mnzbjldquRnp6LQq4M
+        Or3L3A0lzs/z65VsYrM+OhoScgWE+/puIGU4Y1BbWsrnksm8Fgyy+6C2sKDb/A2F2H0QqbbS23tVyErS
+        Z0V5VDdPKQo4BHLpdF5bXDxggzXs6TZkWy9yaNDhvS9kJQlVhzMsUo9mb6/gGOIVkTfa4/hlbOy1Looc
+        U6nkcUaV5ATMioKqy/VNz+t37e3nd3y+X5xRLauEMpny4zUoCqK2RyyWs1LEar1NVcpwwdDFhSCQ0zTD
+        oiDldBZdTcIP/nBGHA8IU+SmhP3+bNhqvSmhn1Kb2+WMatmSR00t9X1b25n/d7iAk0ynr07nK10UwORw
+        YgVkePiekC2MNihnnDGIKOCwUTR65GTTsGROTlaXTCDucLzkjEts0gB0NrGhkSgo5MrAjETjyrG1RdXt
+        3gz3918QctVYleVjGwRWBwfvChkeGFNaPfpQR2o8+gDIMRqBHlOFOXLkSYw8Roe9ImI0mmJc4RwaId4p
+        9XmXcGcOmJHoJD5HGtTN8wrCBrYxhyNU9yCZAXKPnsCDDWri9LnyHfW29AlD11hDg4/ZbAHqdlfEba1F
+        fnr6FPpp8aMN11gT2wYhSf8A34YRAieo4FIAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="detalle_CompraTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>323, 17</value>
+  </metadata>
+  <metadata name="printDatagrid.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>529, 17</value>
   </metadata>
 </root>
