--- a/SGF.PRESENTACION/formModales/modalesBuscadores/mdBuscarMoneda.resx
+++ b/SGF.PRESENTACION/formModales/modalesBuscadores/mdBuscarMoneda.resx
@@ -117,62 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="dgvcID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="btnModificar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dgvcNombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="btnEliminar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dgvcCantidad.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="monedaBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>114, 17</value>
   </metadata>
-  <metadata name="dgvcPrecioCompra.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="negocio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
-  <metadata name="dgvcSubTotal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="monedaTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>289, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnNuevo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAbZJREFUSEvlVDtOw0AQzSH4FHzOAAg4Q8COd13QUtACEVwFlAiugGQ7HyQ6rsCn
-        JBUJ0KaCIhTmjTPR2s4kXosOnvQ0cmbmTXZ2dir/B27HXXcDv+5EquuG+tmN1IAsfe9H6lRFao1Dy6PW
-        ri07ob6C4Lcb6Xg21Qhs+oG/xKl28FreJgr0ZVGZiH8Hd1liPigQrfiShIqI3M+9lrfNUjKoRTj6hyRg
-        zVC/VW8OFllyGgi6nkpK8fDuKK7fnydW8k+IEzVYMotkigouOexFMYGs5DdUo2rgr7K0Ae7hTE4wtC+i
-        YxpvljZA9VspOM0yRdCyDksbjB9aNpB6T4ITvgx7SRGy6d/lO1KPLG1AU5EPpEu2AcXlc0mPpQ1wvKd8
-        4K9OEuoHljZIdlM+MEcSJJCV/BmGus3SBrQExeAUSxUJ/GOWNqBtSvMtJjDti6iR03VWWDoLOJty0pjU
-        e5sXj1ZdsOQ0aF1LU1aGGKA+tscCS8pAL3dom0oCRUzyAn+LpeYDK2EDCa+S0ExSB/AHWcIOtK5RqFE0
-        DGO/uixs0TzQNkWxE7AD4sGqQWLxDmhMZ07RH0Sl8gMqTW6oHJiopAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAVpJREFUSEvtlb1Kw1AUx++ioLuzdXVxEKG0mrZDVwVt6yxSv9s+gC4iiAXxEUT8
-        AF/BTXBtB1/ARxAcKvSam7/nJJe0IU1Tcx1EPfAjnJN7/j+SDBF/r7AkVrAotnyo17eSFepWEY1c2Wc9
-        dYPlKYSoTN8HztGejhheqOVzqOeRmEbB0lHRhVohgwPrEbuZNrYXXrAxh1j4HJ/nPdrXUcMLlijSO8eX
-        oT0dEV//EiOJs5eFalYDgdzzvH+WWOKUU5Bvr5DdLtT5jiegK/c8dyoz5hLGvjyGlNINth9uPQH19l2z
-        J2BMJIwv0oQEjKlEnW36T8Coi/3AfRcTSb/g4/nJE1EfEiWV8IeV7x3vFV2fujO+uiKaf9uHV4ersK9O
-        emEE9+poLTAzkozMz5NkRXpgSBy0pyPiC7NinH6x7YFB0bQwL8Z0xGhFC5MkKgX+69GUkBYTevXXlhCf
-        N7PHyyZ6MusAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnLimpiar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAolJREFUSEvtkk1oE1EQgLdrdlesipCTP7dSLeLBsz/ZiOQkJpuCaG8KvXoQlF5q
-        oxUPoh4qvVSCtCAYU2k1u0kJNuRHjxEsCoJKG+0GEatGbX7Kbnact3nWuJFNGnrsB0Oy896bb9/MMhu0
-        TUTVrkdUPR3+DFtpak2I/mi/S1Jei5LSR1ONEIGc11Zii7BnSgWnrOrx2Afoosu2iL2RHhSUUQQuKfqS
-        phuJf4JOIiD/Y0uwPZLXxuWPsNtctCMQYF1+5RkRmBK/MkBX7InkoWd6AXbQR1uwPZf+CES/8kP0TTc/
-        h20blPM6yKr2ZSYHO2n6vxzzzuwTpWipTnKDLtmDgllTgvEkr3loupHGNlUOeR/voqv2yIuaGwVz+LXd
-        z2aBo2kT0accxMG+MotKypu/NzAjSLe1D+k1CnKWwkS2jG0yjnhj++nW9oAJxvnzJr8QunDyrVuSdasI
-        57JytDd6mm5fO5Diu7WQY744yACJwjWhcqX/4jurCG9U8HjinfRYa0BC6IK0cAtSQgl/AUVQucNC6WpN
-        pg47v53tG1XrRS0NHouN4JvHIc2/x+IGKW4NfZKD4lBNVLzMwNxQd+7EqdBX8kHQMvZAZvNhLF5tKJ7C
-        SPCrz8ZTHvQpDkrDHabsV4A1wgO+87RMcyDKB40oB0aMB0PhoBp2QHXSURPVizGqMg+VERbKt9nvkGQc
-        tERzIMzw2hib00c7QB/fZIqsxetvZbY1Kbjp8daBLMPhXCb+KUwigW//CG81WydJ83fpsfbANzxXlbll
-        0i5yK32MNeexKkjx8/Cc2Ua3tw884PfqQTarP3SULXMpQJI7QLetD9jCLZDhzmB77qHsBWSE43Rpg/WC
-        YX4DlU7y7bsANwYAAAAASUVORK5CYII=
-</value>
-  </data>
 </root>
